--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-body{
+body {
   font-family: 'Poppins', sans-serif;
 }
 
-.container{
+.container {
   max-width: 500px;
   margin: 30px auto;
   overflow: auto;
@@ -20,14 +20,14 @@ body{
   border-radius: 5px;
 }
 
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.btn{
+.btn {
   display: inline-block;
   background: #000;
   color: #fff;
@@ -41,86 +41,72 @@ body{
   font-family: inherit;
 }
 
-.btn:focus{
+.btn:focus {
   outline: none;
 }
 
-.btn:active{
+.btn:active {
   transform: scale(0.98);
 }
 
-.btn-block{
+.btn-block {
   display: block;
   width: 100%;
 }
 
-.event{
+.task {
   background: #f4f4f4;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
 }
 
-.event.reminder{
-  border-left: 5px solid greenyellow;
+.task.reminder {
+  border-left: 5px solid green;
 }
 
-.event h3{
+.task h3 {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.add-form{
+.add-form {
   margin-bottom: 40px;
 }
 
-.form-control{
+.form-control {
   margin: 20px 0;
 }
 
-.form-control label{
+.form-control label {
   display: block;
 }
 
-.form-control-check{
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.form-control-check {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.form-control-check label{
-    flex: 1;
+.form-control-check label {
+  flex: 1;
 }
 
-.form-control-check input{
+.form-control-check input {
   flex: 2;
   height: 20px;
 }
 
-footer{
+footer {
   margin-top: 30px;
-  text-align: center; 
+  text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
